@@ -1,4 +1,4 @@
- /* $Id: ChangeLog,v 1.692 2000-02-03 22:50:58 sandervl Exp $ */
+ /* $Id: ChangeLog,v 1.693 2000-02-03 23:06:34 sandervl Exp $ */
 
  2000-02-03: Jens Wiessner <wiessnej@rfi.de>
 	- NTDLL: Ported Wine security apis
@@ -18,6 +18,7 @@
                  (for RealPlayer videos in 16 bits mode)
 	         BitBlt fix (return after dibsection blit -> fixes Quake 2)
                  Added MMX RGB conversion.
+	- USER32: Added export for OS2ToWin32Handle
 	- COMDLG32: Merged with latest Wine version (20000109)
 	- INCLUDE\WIN: Fixes to compile comdlg32 in C mode
 		 (will be rewritten in assembly for better performance)
